--- a/stories/button.css
+++ b/stories/button.css
@@ -1,30 +1,57 @@
-.storybook-button {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  border-radius: 3em;
+.button {
+  box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.10);
   cursor: pointer;
   display: inline-block;
+  color: var(--Texto, #181E4B);
+  font-family: 'Inter', Arial, sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
   line-height: 1;
+  padding: 8px 16px;
 }
-.storybook-button--primary {
-  color: white;
-  background-color: #1ea7fd;
+
+.button--primary {
+  border-radius: 10px;
+  background: var(--Primario, #F1A501);
+  border: 1px solid var(--Primario, #F1A501);
+  color: #fff;
+  height: 60px;
 }
-.storybook-button--secondary {
-  color: #333;
+
+.button--primary:hover {
+  background: var(--Hover-primario, #E49F1A);
+}
+
+.button--primary:active {
+  background: var(--Presionado-primario, #DB8C15);
+}
+
+.button--secondary {
   background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+  border-radius: 5px;
+  border: 1px solid var(--Texto, #181E4B);
+  color: var(--Texto, #181E4B);
 }
-.storybook-button--small {
-  font-size: 12px;
-  padding: 10px 16px;
+.button--secondary:hover {
+  border: 1.5px solid var(--Texto, #181E4B);
 }
-.storybook-button--medium {
+.button--secondary:active {
+  border: 1px solid var(--Texto, #181E4B);
+  background: var(--Presionado-secundario, #C0C5EF);
+}
+
+.button--small {
   font-size: 14px;
-  padding: 11px 20px;
+  height: 40px;
 }
-.storybook-button--large {
+
+.button--large {
   font-size: 16px;
-  padding: 12px 24px;
+}
+
+.button--xl {
+  width: 300px;
+  font-size: 16px;
 }
