--- a/stories/footer.css
+++ b/stories/footer.css
@@ -1,52 +1,34 @@
+/* Mobile First */
 .footer {
-    align-items: flex-start;
-    display: flex;
-    gap: 108px;
-    justify-content: center;
-    position: relative;
+  color: #5e6282;
+  font-family: Inter, Arial;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 170%;
+  /* 20.4px */
+
+  margin: auto;
+  text-align: center;
+  width: 324px;
 }
 
-.footer__container {
-    align-items: center;
-    display: inline-flex;
-    flex: 0 0 auto;
-    flex-direction: column;
-    gap: 32px;
-    position: relative;
-}
-
-.footer .text {
-    align-items: center;
-    display: inline-flex;
-    flex: 0 0 auto;
-    flex-direction: column;
-    gap: 16px;
-    position: relative;
-}
-
-.footer .p {
-    color: #5e6282;
-    font-family: "Inter-Bold", Helvetica;
+/* Medium size: tablets */
+@media screen and (min-width: 640px) {
+  .footer {
     font-size: 16px;
-    font-weight: 700;
-    letter-spacing: 0;
-    line-height: normal;
-    margin-top: -1px;
-    position: relative;
-    text-align: center;
-    white-space: nowrap;
-    width: fit-content;
+    width: 430px;
+  }
 }
 
-.footer .text-wrapper {
-    color: #5e6282;
-    font-family: "Inter-Regular", Helvetica;
+/* Large size: Laptops, Desktops */
+@media screen and (min-width: 940px) {
+  .footer {
     font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    letter-spacing: 0;
-    line-height: normal;
-    position: relative;
-    text-align: center;
-    width: fit-content;
+    width: 485px;
+  }
+}
+
+.footer__text {
+  margin: 16px auto;
 }
