--- a/stories/commentItem.css
+++ b/stories/commentItem.css
@@ -1,21 +1,68 @@
 .comment-item {
-  padding: 24px;
   border-radius: 10px;
-  background: var(--Blanco, #FFF);
-  /* Tarjeta/Sombra Lightmode */
-  box-shadow: 0px 4px 80px 0px rgba(0, 0, 0, 0.05);
-  color: black;
-  width: 500px;
+  border: 3px solid #f7f7f7;
+  box-sizing: border-box;
+  color: var(--Sub-texto, #5e6282);
+  font-family: 'Inter', sans-serif;
+  font-size: 12px;
+  margin: 0;
+  padding: 24px 32px;
   position: relative;
+  width: 250px;
+}
+
+.comment-item--first {
+  background: var(--Blanco, #fff);
+  box-shadow: 0px 4px 80px 0px rgba(0, 0, 0, 0.05);
+  border: 3px solid white;
 }
 
 .comment-item__image {
-  background-color: #FFF;
+  background-color: #fff;
   border-radius: 50%;
   width: 68px;
   height: 68px;
   position: absolute;
   top: 0;
-  left: 0;
-  transform: translateX(-50%) translateY(-50%);
+  left: 50%;
+  transform: translateX(-50%) translateY(-75%);
+}
+
+.comment-item__caption {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.comment-item__text {
+  font-weight: 300;
+  margin: 0;
+  margin-bottom: 20px;
+}
+
+.comment-item__author {
+  font-size: 18px;
+  margin: 0;
+}
+
+.comment-item__destination {
+  margin: 0;
+  font-size: 12px;
+}
+
+@media screen and (min-width: 720px) {
+  .comment-item {
+    width: 500px;
+    font-size: 16px;
+    height: 232px;
+  }
+
+  .comment-item__image {
+    left: 0;
+    transform: translateX(-50%) translateY(-50%);
+  }
+}
+
+@media screen and (min-width: 1120px) {
 }
