--- a/stories/global.css
+++ b/stories/global.css
@@ -18,6 +18,7 @@ body {
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  text-align: center;
   text-transform: uppercase;
 }
 
