--- a/stories/featuredCard.css
+++ b/stories/featuredCard.css
@@ -20,9 +20,18 @@
   padding: 32px 24px;
 }
 
+.featured-card--dark .featured-card__figcaption {
+  border-color: var(--gray-200);
+  color: white
+}
+
 .featured-card__svg {
   position: relative;
   top: 5px;
+}
+
+.featured-card--dark .featured-card__svg path {
+  fill: white
 }
 
 .featured-card__headline {
@@ -37,10 +46,18 @@
   margin-bottom: 8px;
 }
 
+.featured-card--dark .featured-card__headline {
+  color: white;
+}
+
 .featured-card__dates {
   margin: 0;
   color: #181e4b;
   font-family: "Inter", Helvetica;
   font-size: 16px;
   line-height: 1;
+}
+
+.featured-card--dark .featured-card__dates {
+  color: white;
 }
