--- a/stories/hero.css
+++ b/stories/hero.css
@@ -1,8 +1,8 @@
 /* Mobile First */
 .hero {
   background-image: url(assets/Decore.png);
-  background-repeat: no-repeat;
   background-position: 100% 0;
+  background-repeat: no-repeat;
   background-size: 200px;
   box-sizing: border-box;
   padding: 30% 0% 5%;
@@ -11,11 +11,11 @@
 
 .hero__container {
   align-items: center;
-  display: flex;
   background-image: url(assets/traveller.png);
-  background-repeat: no-repeat;
   background-position-x: 120%;
+  background-repeat: no-repeat;
   background-size: 260px;
+  display: flex;
   margin: auto;
   width: 358px;
 }
@@ -25,12 +25,16 @@
   max-width: 205px;
 }
 
+.hero__content--dark {
+  color: white;
+}
+
 .hero__headline {
   font-family: "Inter-ExtraBold", Helvetica;
   font-size: 30px;
   font-weight: 800;
-  margin: 0;
   line-height: 1.2;
+  margin: 0;  
 }
 
 .hero__subtitle {
@@ -76,9 +80,9 @@
   }
 
   .hero__container {
+    background-size: 700px;
     height: 748px;
     width: 1120px;
-    background-size: 700px;
   }
 
   .hero__content {
