--- a/stories/commentItem.css
+++ b/stories/commentItem.css
@@ -11,10 +11,20 @@
   width: 250px;
 }
 
+.comment-item--dark.comment-item {
+  border-color: var(--gray-200);
+}
+
 .comment-item--first {
   background: var(--Blanco, #fff);
   border: 3px solid white;  
   box-shadow: 0px 4px 80px 0px rgba(0, 0, 0, 0.05);
+}
+
+.comment-item--dark.comment-item--first {
+  border-color: #08033D;
+  background-color: #08033D;
+  color: white;
 }
 
 .comment-item__image {
@@ -37,6 +47,7 @@
 
 .comment-item__text {
   font-weight: 300;
+  line-height: 30px; /* 187.5% */
   margin: 0;
   margin-bottom: 20px;
 }
@@ -46,15 +57,27 @@
   margin: 0;
 }
 
+.comment-item--dark .comment-item__author {
+  color: white;
+}
+
 .comment-item__destination {
   font-size: 12px;
   margin: 0;  
+}
+
+.comment-item--dark .comment-item__destination {
+  color: white;
 }
 
 .comment-item__icon {
   margin: 0 5px;
   position: relative;
   top: 6px;
+}
+
+.comment-item--dark .comment-item__plane-path {
+  fill: white
 }
 
 @media screen and (min-width: 720px) {
